# startup-factory

./: README.md  SKILL.md  pyproject.toml
.github/workflows/: package-ci.yml  release.yml
adapters/: GitHubIssues.md  Jira.md  Linear.md  Markdown.md  _TEMPLATE.md
config/: automation.config.json  deployment.config.json  deployment.production.approval-required.example.json  planning.config.md  project-management.config.md  statuses.config.json  team.config.md
extensions/tracker-backends/: README.md
packaging/: build_bundle.py  bundle-spec.json
reference/: automation.md  deployment.md  dispatch.md  guardrails.md  lifecycle.md  manual-release-template.md  orchestration.md  superpowers-planning.md  team-roles.md  vocabulary.md
roles/: backend.md  frontend.md  integrator.md  principal-architect.md  qa.md  reviewer.md  sceptical-architect.md  team-lead.md
src/startup_factory_cli/: cli.py  installer.py
teams/: README.md  _PLAYBOOK.md  deep-backend.md  deep-frontend.md  deep-infra.md  deep-llm.md  deep-security.md  full-stack.md
teams/roles/: principal-backend-architect.md  principal-cloud-infrastructure-architect.md  principal-frontend-architect.md  principal-llm-architect.md  principal-security-architect.md  principal-software-architect.md  sceptical-principal-llm-architect.md  senior-cloud-engineer.md  (+13 more)
tests/: custom-tracker-release-snapshot-test.py  deployment-test.sh  dispatch-test.sh  launcher-test.sh  parallel-integration-test.sh  pm-monitor-test.sh  release-lifecycle-test.py  review-evidence-test.py  run-all.sh  superpowers-planning-test.py  task-hold-test.py  task-routing-test.sh  task-runtime-test.sh  tracker-adapter-pagination-test.py  tracker-ops-test.sh  update-installed-skill-test.sh
(+7 files in other folders)
